# xiaohongshu-mcp-python

./: .gitignore  README.md  STREAMING_IMPLEMENTATION_SUMMARY.md  aaaa.json  cookies.json  docker-compose.yml  pyproject.toml  pytest.ini  run.sh  test_clear_all_data.py  test_final_cleanup.py  test_publish_progress.py  空白.md
ai_social_scheduler/: .env.example  .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  REFACTOR_GUIDE.md  TEST_API.md  TEST_DIRECT.md  TIMEOUT_FIX.md  apply_timeout_fix.sh  chat.py  pyproject.toml  run.py  start_streaming.py  start_streaming.sh  test_content_publish.py  test_xhs_content_generator.py  verify_refactor.py
ai_social_scheduler/config/: nodes.yaml  routes.yaml
ai_social_scheduler/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml  nginx.conf
ai_social_scheduler/src/ai_social_scheduler/: USAGE.md  __init__.py  __main__.py  app.py  实现小红书功能.md
ai_social_scheduler/src/ai_social_scheduler/agents/: __init__.py  base.py  router.py  xhs_agent.py  xhs_content_agent.py  xhs_image_agent.py  xhs_publish_agent.py
ai_social_scheduler/src/ai_social_scheduler/agents/xhs/: __init__.py  (+1 more)
ai_social_scheduler/src/ai_social_scheduler/ai_agent/: __init__.py
ai_social_scheduler/src/ai_social_scheduler/api/: __init__.py  __main__.py  app.py  streaming_api.py
ai_social_scheduler/src/ai_social_scheduler/client/: __init__.py
ai_social_scheduler/src/ai_social_scheduler/config/: __init__.py  config.py  loader.py  mcp_config.py  model_config.py
ai_social_scheduler/src/ai_social_scheduler/core/: __init__.py  constants.py  exceptions.py  graph.py  models.py  node.py  route.py  state.py  task.py
ai_social_scheduler/src/ai_social_scheduler/graph/: __init__.py  builder.py  executor.py  streaming.py
ai_social_scheduler/src/ai_social_scheduler/mcp/: __init__.py  registry.py
ai_social_scheduler/src/ai_social_scheduler/middleware/: __init__.py  base.py  chain.py  logging_middleware.py  retry_middleware.py
ai_social_scheduler/src/ai_social_scheduler/nodes/: __init__.py  base.py  factory.py  registry.py
ai_social_scheduler/src/ai_social_scheduler/orchestrator/: __init__.py  orchestrator.py  task_queue.py
ai_social_scheduler/src/ai_social_scheduler/prompts/: __init__.py
ai_social_scheduler/src/ai_social_scheduler/router/: __init__.py  intent_analyzer.py  router_system.py  rule_engine.py
ai_social_scheduler/src/ai_social_scheduler/state/: __init__.py  manager.py
ai_social_scheduler/src/ai_social_scheduler/subgraphs/: __init__.py  base.py  xhs_workflow_subgraph.py
ai_social_scheduler/src/ai_social_scheduler/tasks/: __init__.py  background.py  celery_app.py  scheduled.py
ai_social_scheduler/src/ai_social_scheduler/tests/: test_xiaohongshu_mcp_agent.py
ai_social_scheduler/src/ai_social_scheduler/tools/: __init__.py  logging.py  xhs_content_generator.py
ai_social_scheduler/src/ai_social_scheduler/utils/: image.py  retry.py  text.py  validators.py
ai_social_scheduler/src/ai_social_scheduler/web/: __init__.py  app.py
ai_social_scheduler/src/ai_social_scheduler/workflows/: __init__.py  xhs_content_workflow.py
ai_social_scheduler/tests/base/agent/: test_image_video_mcp_agent.py  test_image_video_mcp_agent_simple.py  test_xhs_content_generator_service.py  test_xiaohongshu_mcp_agent.py
ai_social_scheduler/tests/integration/: test_graph.py  test_xhs_agent_node.py
image_video-mcp/: .gitignore  README.md  pyproject.toml  test_generate_image.py
image_video-mcp/src/image_video_mcp/: __init__.py
image_video-mcp/src/image_video_mcp/clients/: __init__.py
xhs-content-generator-mcp/: .env.example  .gitignore  README.md  inspector_test_mcp.sh  pyproject.toml  run.sh
xhs-content-generator-mcp/src/xhs_content_generator_mcp/: __init__.py  main.py
xhs-content-generator-mcp/src/xhs_content_generator_mcp/clients/: __init__.py  genai_client.py  model_providers.py  text_client.py
xhs-content-generator-mcp/src/xhs_content_generator_mcp/config/: __init__.py  model_config.py
xhs-content-generator-mcp/src/xhs_content_generator_mcp/prompts/: compress_prompt.txt  lifestyle_content_prompt.txt  outline_prompt.txt  title_content_tags_prompt.txt
xhs-content-generator-mcp/src/xhs_content_generator_mcp/services/: lifestyle_content_service.py  outline_service.py  vision_service.py
xhs-content-generator-mcp/src/xhs_content_generator_mcp/utils/: error_parser.py  image_compressor.py
xhs-data-collector-mcp/: pyproject.toml
xhs-data-collector-mcp/src/xhs_data_collector_mcp/: __init__.py
xhs-video-mcp/: .env.example  README.md  pyproject.toml  start.sh  启动指南.md
xhs-video-mcp/src/xhs_video_mcp/: __init__.py  main.py
xhs-video-mcp/src/xhs_video_mcp/config/: settings.py
xhs-video-mcp/src/xhs_video_mcp/models/: __init__.py  schema.py
xhs-video-mcp/src/xhs_video_mcp/services/: __init__.py  llm_service.py  material_service.py  subtitle_service.py  video_generation_service.py  video_service.py  voice_service.py
xhs-video-mcp/src/xhs_video_mcp/utils/: __init__.py  video_effects.py
(+341 files in other folders)
