[project]
name = "xiaohongshu-mcp-python"
version = "0.1.0"
description = "小红书 MCP 服务的 Python 实现，提供小红书内容发布、搜索、用户管理等功能"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
    "fastmcp>=2.0.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
xiaohongshu-mcp = "xiaohongshu_mcp_python.main:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaohongshu_mcp_python"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
