[project]
name = "xhs-content-generator-mcp"
version = "0.1.0"
description = "基于 FastMCP 的小红书内容生成 MCP 服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_content_generator_mcp"]

[project.scripts]
xhs-content-generator-mcp = "xhs_content_generator_mcp.main:main"

