[project]
name = "xhs-data-collector-mcp"
version = "0.1.0"
description = "基于 FastMCP 的小红书数据采集 MCP 服务"
readme = "README.md"
authors = [
    { name = "luyike", email = "248618931@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_data_collector_mcp"]

[project.scripts]
xhs-data-collector-mcp = "xhs_data_collector_mcp.main:main"
